@@ -25,6 +25,13 @@ DEPRECATION
 * The warning for a short repeat length vector for Bruvo's distance is 
   deprecated and will become an error in the future
   
+BUG FIX
+-------
+
+ * A bug in read.genalex() where removed samples would have incorrect strata
+   labels was fixed. Thanks to Hernán Dario Capador-Barreto for identifying it.
+   See https://github.com/grunwaldlab/poppr/issues/147.
+  
 MISC
 ----
 
